--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -1,4 +1,12 @@
 sky:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    host: localhost
+    port: 3306
+    database: sky_take_out
+    username: root
+    password: 7156
+
   alioss:
     endpoint: oss-cn-beijing.aliyuncs.com
     access-key-id: ${ALIBABA_CLOUD_ACCESS_KEY_ID}
