--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,6 +6,11 @@ sky:
     database: sky_take_out
     username: root
     password: 7156
+  redis:
+    host: localhost
+    port: 6379
+    password: 7156
+    database: 0
 
   alioss:
     endpoint: oss-cn-beijing.aliyuncs.com
